[USER] Implement /user/me api to give the user context to the frontend
